--- a/my_flask_app/templates/PurchaseOrder.html
+++ b/my_flask_app/templates/PurchaseOrder.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="mb-4">
                         <label for="date" class="block text-gray-700">Date:</label>
-                        <input type="date" id="date" name="date" class="border border-gray-400 rounded p-1 w-full" required>
+                        <input type="date" id="date" name="date" class="border border-gray-400 rounded p-1 w-full" value="{{ current_date }}" required>
                     </div>
                 </div>
                 <div>
