--- a/my_flask_app/templates/PurchaseOrder.html
+++ b/my_flask_app/templates/PurchaseOrder.html
@@ -48,7 +48,7 @@
                             <label for="supplier" class="block text-gray-700">Supplier</label>
                             <select id="supplier" name="supplier" class="border border-gray-400 rounded p-1 w-full">
                                 {% for supplier in suppliers %}
-                                    <option value="{{ supplier.id }}">{{ supplier.name }}</option>
+                                    <option value="{{ supplier.supplier_id }}">{{ supplier.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="col-span-2 mb-4">
                             <label for="attention" class="block text-gray-700">Attention</label>
-                            <input type="number" id="attention" name="attention" class="border border-gray-400 rounded p-1 w-full" required>
+                            <input type="text" id="attention" name="attention" class="border border-gray-400 rounded p-1 w-full" required>
                         </div>
                         <div class="mb-4">
                             <label for="xrates" class="block text-gray-700">Currency Rate:</label>
